2001-02-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* readline: Update to new version (4.2-beta1).

2001-02-05  Mumit Khan  <khan@nanotech.wisc.edu>

	* configure.in (TEMPLATE_AR, TEMPLATE_ARFLAGS): New variables.
	* Makeconf.in (TEMPLATE_AR, TEMPLATE_ARFLAGS): Likewise.
	
	* configure.in (XTRA_CXXFLAGS): Use -fno-implicit templates for
	pre-gcc3 compilers. Remove -fno-rtti and -fno-exceptions.
	(DEPEND_FLAGS, DEPEND_EXTRA_SED_PATTERN): New macros.
	(BLAS_LIBS): Fix test for sunperf library on Sun Solaris.
	(CPICFLAG, CXXPICFLAG, FPICFLAG, SH_LDFLAGS, RLD_FLAG): Add Sun
	compiler support.
	* Makefile.in (DEPEND_FLAGS, DEPEND_EXTRA_SED_PATTERN): New
	variables.
	(%.d : %.cc): Use.
	(%.d : %.c): Likewise.
	* acconfig.h (CXX_ISO_COMPLIANT_LIBRARY): Add #undef.

2001-01-31  Mumit Khan  <khan@nanotech.wisc.edu>

	* Makeconf.in (%.d : %.cc): Strip the directory portion of the
	target.
	(%.d : %.c): Likewise.

	* aclocal.m4 (OCTAVE_CXX_ISO_COMPLIANT_LIBRARY): New macro.
	* configure.in: Use it.

2001-01-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-subst-config-vals): Substitute
	OCTAVE_CONF_CANONICAL_HOST_TYPE here too.
	* octave-bug.in: Substitute OCTAVE_CONF_CANONICAL_HOST_TYPE, not
	OCTAVE_CANONICAL_HOST_TYPE.

2000-12-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4: Give gperf a keyword, to avoid complaints from newer
	versions.

2000-11-27  Marcus.Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>

	* configure.in: Handle *-*-gnu* the same as *-*-linux* for shared
	library creation.

2000-11-03  Andy Adler  <en254@freenet.carleton.ca>

	* mkoctfile.in: Handle -c to mean compile only.

2000-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Handle --print.

2000-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_PROG_GPERF): Check that gperf supports flags
	we use.

	* missing: New file, modified from the missing script provided by
	automake (never create files, just exit with failure status).