@@ -1,3 +1,7 @@
+2001-02-07  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* autogen.sh: Allow running of autoconf or autoheader to be skipped.
+
 2001-02-06  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* readline: Update to new version (4.2-beta1).
